# batch-file-renamer

./: .gitignore  README.md  build.bat  main.py  main.spec  pyproject.toml
